# kdotool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: copilot-review.yml  release.yml  rust.yml
examples/: active_window.rs
src/: help.rs  lib.rs  main.rs  parser.rs  templates.rs
