[package]
name = "kdotool"
version = "0.2.2-SNAPSHOT"
description = "A xdotool-like tool to manipulate windows on KDE Wayland"
authors = ["Jin Liu <m.liu.jin@gmail.com>"]
repository = "https://github.com/jinliu/kdotool"
license = "Apache-2.0"
keywords = ["xdotool", "wayland", "kde"]
categories = ["command-line-utilities"]
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
dbus = "0.9.7"
env_logger = "0.10.1"
handlebars = "5.1.2"
lexopt = "0.3.0"
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = true # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
