[package]
name = "kdotool"
version = "0.2.2"
description = "A xdotool-like tool to manipulate windows on KDE Wayland"
authors = ["Jin Liu <m.liu.jin@gmail.com>"]
repository = "https://github.com/tvidal-net/kdotool"
license = "Apache-2.0"
keywords = ["xdotool", "wayland", "kde"]
categories = ["command-line-utilities"]
edition = "2024"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dbus = "0.9.10"
env_logger = "0.11.8"
handlebars = "6.4.0"
lexopt = "0.3.1"
log = "0.4.29"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = true # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
